chore: made table to be responsive on different screen sizes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div id="list-section">
         <div class="container">
           <h2 class="title py-3">Results</h2>
-          <div class="list">
+          <div class="list table-responsive">
             <table class="table table-striped">
               <thead>
                 <tr>
